--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="card-white2">
 		<h2>Cat : All about cats</h2>
 			<p>Our website world contains all the information you need to take good care of your cat and ensure its well-being. All our guides are there to help you adopt a kitten, feed a cat, educate it and look after its health throughout its life. For the curious and cat lovers, our detailed breed sheets will complete your knowledge on all cats. </p>
-			<p>To help you in your daily life, our website offers you services such as the breed test to find the cat that suits you or the search engine to find a name for your cat. The cat news also has an important place in order to allow everyone to keep up with the latest cat information.
+			<p>To help you in your daily life, our website offers you services such all the information you need to adopt a little furry friend and also all you need to know on terms of alimentation. The cat news also has an important place in order to allow everyone to keep up with the latest cat information.
 			 </p>
 		</div>	 
 		
